--- a/gradle.properties
+++ b/gradle.properties
@@ -12,4 +12,6 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-
+#version
+VERSION_CODE=100
+VERSION_NAME=1.0.0
